# StockDataDump

./: .gitignore  CONTRIBUTING  LICENSE  README.md  setup.sh
.github/workflows/: ci.yml
python/: README.md  pyproject.toml
python/dumps/manifests/: stooq.jsonl
python/stockdatadump/: __init__.py  app.py  jobs.py  storage.py
python/stockdatadump/dumps/manifests/: yahoo.jsonl
rust-core/: Cargo.toml
rust-core/dumps/manifests/: yahoo.jsonl
rust-core/src/: main.rs
scripts/: clean.sh  install.sh  update.sh
