[project]
name = "stockdatadump"
version = "0.1.0"
description = "Orchestrator for high-throughput stock data dumps using Rust fetcher and Arrow files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "typer>=0.12",
    "rich>=13.7",
    "zstandard>=0.22",
]

[project.scripts]
stockdatadump = "stockdatadump.app:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
