[package]
name = "rust-core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dump-core"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
async-compression = { version = "0.4.10", features = ["tokio", "zstd"] }
clap = { version = "4.5.16", features = ["derive"] }
futures = "0.3.30"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "json", "gzip", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
